--- a/settings.gradle
+++ b/settings.gradle
@@ -35,6 +35,7 @@ include 'bungee'
 include 'bungee:api'
 include 'bungee:bungeeperms2'
 include 'bungee:bungeeperms3'
+include 'bungee:luckperms'
 include 'bungee:bungeeonlinetime30'
 include 'bungee:bungeeonlinetime31'
 include 'bungee:bungeeonlinetime43'
