add support for Clans for Party and Friends Extended for Bungeecord

--- a/settings.gradle
+++ b/settings.gradle
@@ -40,5 +40,6 @@ include 'bungee:bungeeonlinetime30'
 include 'bungee:bungeeonlinetime31'
 include 'bungee:bungeeonlinetime43'
 include 'bungee:protocolsupportbungee'
+include 'bungee:pafclans'
 include 'sponge'
 include 'sponge:api'
