--- a/bungee/pafclans/build.gradle
+++ b/bungee/pafclans/build.gradle
@@ -15,26 +15,13 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-allprojects {
-    repositories {
-        maven {
-            url "https://oss.sonatype.org/content/repositories/snapshots"
-        }
-    }
-    dependencies {
-        compileOnly group: 'net.md-5', name: 'bungeecord-api', version: "1.10-SNAPSHOT"
-        compile project(":api")
+repositories {
+    maven {
+        url "http://nexus.codecrafter47.dyndns.eu/content/repositories/thirdparty/"
     }
 }
 
 dependencies {
-    compile project(":bungee:api")
-    compile project(":bungee:bungeeperms2")
-    compile project(":bungee:bungeeperms3")
-    compile project(":bungee:luckperms")
-    compile project(":bungee:bungeeonlinetime30")
-    compile project(":bungee:bungeeonlinetime31")
-    compile project(":bungee:bungeeonlinetime43")
-    compile project(":bungee:protocolsupportbungee")
-    compile project(":bungee:pafclans")
+    compileOnly group: "de.simonsator.partyandfriends.clan", name: "Clans", version: "0.9.8.33"
+    compileOnly group: "de.simonsator.partyandfriends", name: "BungeecordPartyAndFriends", version: "1.0.53"
 }
