--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile project(":bungee:bungeeonlinetime30")
     compile project(":bungee:bungeeonlinetime31")
     compile project(":bungee:bungeeonlinetime43")
+    compile project(":bungee:bungeeonlinetime53")
     compile project(":bungee:protocolsupportbungee")
     compile project(":bungee:pafclans")
 }
