--- a/settings.gradle
+++ b/settings.gradle
@@ -39,6 +39,7 @@ include 'bungee:luckperms'
 include 'bungee:bungeeonlinetime30'
 include 'bungee:bungeeonlinetime31'
 include 'bungee:bungeeonlinetime43'
+include 'bungee:bungeeonlinetime53'
 include 'bungee:protocolsupportbungee'
 include 'bungee:pafclans'
 include 'sponge'
