fix Sponge 7.0.0 support

--- a/settings.gradle
+++ b/settings.gradle
@@ -44,3 +44,5 @@ include 'bungee:protocolsupportbungee'
 include 'bungee:pafclans'
 include 'sponge'
 include 'sponge:api'
+include 'sponge:sponge5'
+include 'sponge:sponge7'
