--- a/sponge/sponge7/build.gradle
+++ b/sponge/sponge7/build.gradle
@@ -21,5 +21,5 @@ repositories {
     }
 }
 dependencies {
-    compileOnly "org.spongepowered:spongeapi:7.0.0-SNAPSHOT"
+    compileOnly "org.spongepowered:spongeapi:7.0.0"
 }
