--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile project(":bungee:bungeeonlinetime31")
     compile project(":bungee:bungeeonlinetime43")
     compile project(":bungee:bungeeonlinetime53")
+    compile project(":bungee:bungeeonlinetime55")
     compile project(":bungee:protocolsupportbungee")
     compile project(":bungee:pafclans")
 }
