--- a/settings.gradle
+++ b/settings.gradle
@@ -40,6 +40,7 @@ include 'bungee:bungeeonlinetime30'
 include 'bungee:bungeeonlinetime31'
 include 'bungee:bungeeonlinetime43'
 include 'bungee:bungeeonlinetime53'
+include 'bungee:bungeeonlinetime55'
 include 'bungee:protocolsupportbungee'
 include 'bungee:pafclans'
 include 'sponge'
