add CMI is vanished provider

--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile project(":bukkit:factions")
     compile project(":bukkit:essentials")
     compile project(":bukkit:askyblock")
+    compile project(":bukkit:cmi")
 }
