--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,7 @@ include 'bukkit:factionsuuid'
 include 'bukkit:factions'
 include 'bukkit:essentials'
 include 'bukkit:askyblock'
+include 'bukkit:cmi'
 include 'bungee'
 include 'bungee:api'
 include 'bungee:bungeeperms2'
