--- a/settings.gradle
+++ b/settings.gradle
@@ -42,6 +42,7 @@ include 'bungee:bungeeonlinetime31'
 include 'bungee:bungeeonlinetime43'
 include 'bungee:bungeeonlinetime53'
 include 'bungee:bungeeonlinetime55'
+include 'bungee:bungeeonlinetime61'
 include 'bungee:protocolsupportbungee'
 include 'bungee:pafclans'
 include 'sponge'
