--- a/settings.gradle
+++ b/settings.gradle
@@ -43,6 +43,7 @@ include 'bungee:bungeeonlinetime43'
 include 'bungee:bungeeonlinetime53'
 include 'bungee:bungeeonlinetime55'
 include 'bungee:bungeeonlinetime61'
+include 'bungee:bungeeonlinetime70'
 include 'bungee:protocolsupportbungee'
 include 'bungee:pafclans'
 include 'sponge'
