--- a/bukkit/simpleclans/build.gradle
+++ b/bukkit/simpleclans/build.gradle
@@ -17,7 +17,7 @@
 
 repositories {
     maven {
-        url "http://104.236.246.108:8081/artifactory/plugins-release-local"
+        url "http://nexus.codecrafter47.dyndns.eu/content/repositories/thirdparty/"
     }
 }
 
