--- a/settings.gradle
+++ b/settings.gradle
@@ -46,6 +46,7 @@ include 'bungee:bungeeonlinetime61'
 include 'bungee:bungeeonlinetime70'
 include 'bungee:protocolsupportbungee'
 include 'bungee:pafclans'
+include 'bungee:proxycore'
 include 'sponge'
 include 'sponge:api'
 include 'sponge:sponge5'
