add PremiumVanish(Bungee) isVanished provider

--- a/settings.gradle
+++ b/settings.gradle
@@ -47,6 +47,7 @@ include 'bungee:bungeeonlinetime70'
 include 'bungee:protocolsupportbungee'
 include 'bungee:pafclans'
 include 'bungee:proxycore'
+include 'bungee:premiumvanish'
 include 'sponge'
 include 'sponge:api'
 include 'sponge:sponge5'
