--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile project(":bungee:protocolsupportbungee")
     compile project(":bungee:pafclans")
     compile project(":bungee:proxycore")
+    compile project(":bungee:premiumvanish")
 }
