add support for LuckPerms API version 5

--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile project(":bungee:bungeeperms2")
     compile project(":bungee:bungeeperms3")
     compile project(":bungee:luckperms")
+    compile project(":bungee:luckperms5")
     compile project(":bungee:bungeeonlinetime30")
     compile project(":bungee:bungeeonlinetime31")
     compile project(":bungee:bungeeonlinetime43")
