--- a/settings.gradle
+++ b/settings.gradle
@@ -37,6 +37,7 @@ include 'bungee:api'
 include 'bungee:bungeeperms2'
 include 'bungee:bungeeperms3'
 include 'bungee:luckperms'
+include 'bungee:luckperms5'
 include 'bungee:bungeeonlinetime30'
 include 'bungee:bungeeonlinetime31'
 include 'bungee:bungeeonlinetime43'
