support new versions of FactionsUUID

--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,7 @@ include 'bukkit:simpleclans'
 include 'bukkit:playerpoints'
 include 'bukkit:multiverse'
 include 'bukkit:factionsuuid'
+include 'bukkit:factionsuuid05'
 include 'bukkit:factions'
 include 'bukkit:essentials'
 include 'bukkit:askyblock'
