--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile project(":bukkit:playerpoints")
     compile project(":bukkit:multiverse")
     compile project(":bukkit:factionsuuid")
+    compile project(":bukkit:factionsuuid05")
     compile project(":bukkit:factions")
     compile project(":bukkit:essentials")
     compile project(":bukkit:askyblock")
