add ProtocolVanish support

--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile project(":bukkit:essentials")
     compile project(":bukkit:askyblock")
     compile project(":bukkit:cmi")
+    compile project(":bukkit:protocolvanish")
 }
