--- a/settings.gradle
+++ b/settings.gradle
@@ -33,6 +33,7 @@ include 'bukkit:factions'
 include 'bukkit:essentials'
 include 'bukkit:askyblock'
 include 'bukkit:cmi'
+include 'bukkit:protocolvanish'
 include 'bungee'
 include 'bungee:api'
 include 'bungee:bungeeperms2'
