update gradle wrapper, remove publication config

--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,12 @@ subprojects {
     }
 
     dependencies {
-        compileOnly "org.projectlombok:lombok:1.16.12"
+        compileOnly 'org.projectlombok:lombok:1.18.12'
+        annotationProcessor 'org.projectlombok:lombok:1.18.12'
+        testCompileOnly 'org.projectlombok:lombok:1.18.12'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
         compileOnly "com.google.code.findbugs:jsr305:3.0.1"
+        testCompileOnly "com.google.code.findbugs:jsr305:3.0.1"
         compileOnly "com.google.guava:guava:18.0"
     }
 
