--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -23,25 +23,25 @@ allprojects {
     }
     dependencies {
         compileOnly group: 'net.md-5', name: 'bungeecord-api', version: "1.10-SNAPSHOT"
-        compile project(":api")
     }
 }
 
 dependencies {
-    compile project(":bungee:api")
-    compile project(":bungee:bungeeperms2")
-    compile project(":bungee:bungeeperms3")
-    compile project(":bungee:luckperms")
-    compile project(":bungee:luckperms5")
-    compile project(":bungee:bungeeonlinetime30")
-    compile project(":bungee:bungeeonlinetime31")
-    compile project(":bungee:bungeeonlinetime43")
-    compile project(":bungee:bungeeonlinetime53")
-    compile project(":bungee:bungeeonlinetime55")
-    compile project(":bungee:bungeeonlinetime61")
-    compile project(":bungee:bungeeonlinetime70")
-    compile project(":bungee:protocolsupportbungee")
-    compile project(":bungee:pafclans")
-    compile project(":bungee:proxycore")
-    compile project(":bungee:premiumvanish")
+    api project(":api")
+    implementation project(":bungee:api")
+    implementation project(":bungee:bungeeperms2")
+    implementation project(":bungee:bungeeperms3")
+    implementation project(":bungee:luckperms")
+    implementation project(":bungee:luckperms5")
+    implementation project(":bungee:bungeeonlinetime30")
+    implementation project(":bungee:bungeeonlinetime31")
+    implementation project(":bungee:bungeeonlinetime43")
+    implementation project(":bungee:bungeeonlinetime53")
+    implementation project(":bungee:bungeeonlinetime55")
+    implementation project(":bungee:bungeeonlinetime61")
+    implementation project(":bungee:bungeeonlinetime70")
+    implementation project(":bungee:protocolsupportbungee")
+    implementation project(":bungee:pafclans")
+    implementation project(":bungee:proxycore")
+    implementation project(":bungee:premiumvanish")
 }
