set group depending on path

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ version '1.0.2-SNAPSHOT'
 subprojects {
     apply plugin: 'java-library'
 
+    def path2 = path.replace(':', '.')
+    group = project(":").group + path2.substring(0, path2.lastIndexOf('.'))
+
     sourceCompatibility = 1.8
 
     repositories {
