--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,19 @@
-/*
- * Copyright (C) 2016 Florian Stober
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
+buildscript {
+    repositories {
+        jcenter()
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath 'ru.vyarus:gradle-quality-plugin:4.4.0'
+    }
+}
 
 group 'de.codecrafter47.data'
 version '1.0.2-SNAPSHOT'
 
 subprojects {
     apply plugin: 'java-library'
+    apply plugin: 'ru.vyarus.quality'
 
     def path2 = path.replace(':', '.')
     group = project(":").group + path2.substring(0, path2.lastIndexOf('.'))
