--- a/sponge/build.gradle
+++ b/sponge/build.gradle
@@ -18,7 +18,7 @@
 allprojects {
     repositories {
         maven {
-            url "http://repo.spongepowered.org/maven"
+            url "https://repo.spongepowered.org/maven"
         }
     }
     dependencies {
