--- a/sponge/sponge7/build.gradle
+++ b/sponge/sponge7/build.gradle
@@ -17,7 +17,7 @@
 
 repositories {
     maven {
-        url "http://repo.spongepowered.org/maven"
+        url "https://repo.spongepowered.org/maven"
     }
 }
 dependencies {
