--- a/bukkit/multiverse/build.gradle
+++ b/bukkit/multiverse/build.gradle
@@ -17,7 +17,7 @@
 
 repositories {
     maven {
-        url "http://repo.onarandombox.com/content/groups/public/"
+        url "https://repo.onarandombox.com/content/groups/public/"
     }
 }
 
