--- a/bukkit/playerpoints/build.gradle
+++ b/bukkit/playerpoints/build.gradle
@@ -17,7 +17,7 @@
 
 repositories {
     maven {
-        url "http://nexus.codecrafter47.dyndns.eu/content/repositories/thirdparty/"
+        url "https://nexus.codecrafter47.dyndns.eu/content/repositories/thirdparty/"
     }
 }
 
