--- a/sponge/nucleus/build.gradle
+++ b/sponge/nucleus/build.gradle
@@ -17,10 +17,10 @@
 
 repositories {
     maven {
-        url "http://repo.drnaylor.co.uk/artifactory/list/minecraft"
+        url "https://repo.drnaylor.co.uk/artifactory/list/minecraft"
     }
     maven {
-        url "http://repo.spongepowered.org/maven"
+        url "https://repo.spongepowered.org/maven"
     }
 }
 dependencies {
