--- a/settings.gradle
+++ b/settings.gradle
@@ -47,6 +47,7 @@ include 'bungee:bungeeonlinetime53'
 include 'bungee:bungeeonlinetime55'
 include 'bungee:bungeeonlinetime61'
 include 'bungee:bungeeonlinetime70'
+include 'bungee:bungeeonlinetime83'
 include 'bungee:protocolsupportbungee'
 include 'bungee:pafclans'
 include 'bungee:proxycore'
