--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -28,6 +28,12 @@ allprojects {
     }
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(8))
+    }
+}
+
 dependencies {
     api project(":api")
     implementation project(":minecraft")
