--- a/sponge/build.gradle
+++ b/sponge/build.gradle
@@ -26,6 +26,12 @@ allprojects {
     }
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(8))
+    }
+}
+
 dependencies {
     api project(":api")
     implementation project(":minecraft")
